<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:background="@color/colorText">

                <ImageView
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/logo"
                    android:contentDescription="Logo"
                    />

            </FrameLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:text="@string/about_first_header"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textSize="18sp"
                android:gravity="center_horizontal" />

            <TextView
                android:id="@+id/about_textview_second"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:text="@string/about_address"
                android:textAlignment="center"
                android:textSize="15sp"
                android:textColor="@color/colorText"
                android:gravity="center_horizontal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:text="@string/about_second_header"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textAlignment="center"
                android:gravity="center_horizontal" />

            <TextView
                android:id="@+id/about_phone_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:text="@string/about_phone_number"
                android:autoLink="phone"
                android:textAlignment="center"
                android:textSize="15sp"
                android:textColorLink="@color/colorText"
                android:gravity="center_horizontal" />

            <TextView
                android:id="@+id/about_mail_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_mail"
                android:textAlignment="center"
                android:autoLink="email"
                android:textSize="15sp"
                android:textColorLink="@color/colorText"
                android:gravity="center_horizontal" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="7dp"
                    android:layout_height="7dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.46"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_baseline_copyright_24" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" ZELE technologies"
                    android:textAlignment="center"
                    android:textSize="7sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageView2"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>



        </LinearLayout>
</ScrollView>